syntax = "proto3";

package pbU;

option go_package = "./";

service UserService {
    rpc UserList(NoParam) returns (UserListResponse);
}

message Profile{
    uint32 User_ID = 1;
    string name = 2;
    string email = 3;
    string gender = 4;
    string age = 5;
    string number = 6;
    string password = 7;
    string address = 8;
    bool Is_Blocked = 9;
}

message UserListResponse {
    repeated Profile Profiles = 1;
}

message NoParam{}